# remnant-checklist

./: .gitignore  Brewfile  Cargo.toml  LICENSE_MIT  Procfile  README.md
.github/workflows/: deploy.yml  test.yml
public/: application.css  application.js  index.html  manifest.webmanifest  serviceworker.js
public/css/: todo.css
src/: app.rs  lib.rs
src/app/: data.rs  storage.rs
src/app/storage/: data_format.rs  mod.rs  storage_service.rs
src/data/: amulets.csv  armor_sets.csv  body_armor.csv  emotes.csv  hand_guns.csv  head_armor.csv  leg_armor.csv  long_guns.csv  melee_weapons.csv  mods.csv  rings.csv  traits.csv
src/js/: share.js  stats.js
tests/: web.rs
