[package]
name = "remnant"
version = "0.1.0"
publish = false
authors = ["Jonathan Knapp <jon@coffeeandcode.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
readme = "README.md"
categories = ['wasm', 'webapp']
repository = "https://github.com/CoffeeAndCode/remnant-checklist"
documentation = "https://github.com/CoffeeAndCode/remnant-checklist"
homepage = "https://github.com/CoffeeAndCode/remnant-checklist"
description = """
Track your unlocked items in Remnant: From the Ashes with an offline enabled webapp!
"""
keywords = ["checklist", "completionist", "video games"]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["wee_alloc"]

[dependencies]
csv = "1.1"
serde = "1"
serde_derive = "1"
strum = "0.19"
strum_macros = "0.19"
wasm-bindgen = "0.2"
yew = "0.17"

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
wee_alloc = { version = "0.4.2", optional = true }

[dependencies.chrono]
version = "0.4"
features = ["serde", "wasmbind"]

[dev-dependencies]
js-sys = "0.3.37"
wasm-bindgen-futures = "0.4.10"
wasm-bindgen-test = "0.3.10"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
